--- a/style.css
+++ b/style.css
@@ -13,10 +13,11 @@ body {
   min-height: 100vh;
   align-items: center;
 }
+
 .clock {
-  width: 30rem;
-  height: 30rem;
-  border: 20px solid white;
+  width: 38rem;
+  height: 38rem;
+  border: 17px solid white;
   border-radius: 50%;
   margin: 50px auto;
   position: relative;
@@ -32,22 +33,24 @@ body {
 }
 .hand {
   width: 50%;
-  height: 6px;
-  background: black;
+  height: 3px;
+  background: #000000;
   position: absolute;
   top: 50%;
   transform-origin: 100%;
   transform: rotate(90deg);
-  transition: all 0.01s;
+  transition: none;
   transition-timing-function: cubic-bezier(0.1, 2.7, 0.58, 1);
 }
 
 .hour-hand {
-  width: 27%;
-  left: 23%;
+  width: 27.3%;
+  left: 22.5%;
+  height: 8px;
 }
 
 .min-hand {
   width: 40%;
   left: 10%;
+  height: 6px;
 }
